--- a/dev-workflow-ui/webContent/view/switch-user.xhtml
+++ b/dev-workflow-ui/webContent/view/switch-user.xhtml
@@ -15,23 +15,28 @@
         <p:staticMessage severity="warn" summary="Warning" detail="#{ivy.cm.co('/switchUser/needLogin')}"
           id="loginMessage" />
       </h:panelGroup>
+
       <h:form id="loginTable">
         <div class="card ui-fluid">
+
+          <h:panelGroup>
+            <div class="flex justify-content-between">
+              <h4 class="m-0">#{ivy.cm.co('/login/signIn')}</h4>
+              <div class="ui-input-icon-left">
+                <i class="pi pi-search" />
+                <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}"
+                  value="#{switchUserBean.globalFilter}">
+                  <p:ajax event="keyup" delay="300" update=":loginTable:users"/>
+                </p:inputText>
+              </div>
+            </div>
+            <p class="mb-0">#{ivy.cm.co('/switchUser/clickLogin')}</p>
+          </h:panelGroup>
+
           <p:dataTable id="users" var="user" value="#{switchUserBean.users}" widgetVar="usersTable"
             emptyMessage="#{ivy.cm.co('/switchUser/noUsers')}" selection="#{switchUserBean.currentUser}"
             selectionMode="single" rowKey="#{user.fullname}">
             <p:ajax event="rowSelect" listener="#{loginBean.loginFromTable}" />
-            <f:facet name="header">
-              <div class="flex justify-content-between pretty-search">
-                <h4 class="m-0">#{ivy.cm.co('/login/signIn')}</h4>
-                <div class="ui-input-icon-left">
-                  <i class="pi pi-search" />
-                  <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{switchUserBean.globalFilter}"
-                    onkeyup="PF('usersTable').filter()" />
-                </div>
-              </div>
-              <p>#{ivy.cm.co('/switchUser/clickLogin')}</p>
-            </f:facet>
 
             <p:column headerText="#{ivy.cm.co('/common/username')}" filterBy="#{user.name}" sortBy="#{user.name}" sortOrder="ascending">
               <h:outputText value="#{user.name}">
