--- a/dev-workflow-ui/webContent/view/webservices.xhtml
+++ b/dev-workflow-ui/webContent/view/webservices.xhtml
@@ -11,22 +11,22 @@
       <h:form id="webServicesForm">
         <p:growl id="growl" showDetail="true" />
         <div class="card">
+          <div class="flex justify-content-between mb-3">
+            <h4 class="m-0">#{ivy.cm.co('/webservices/webServiceProcesses')}</h4>
+            <div class="ui-input-icon-left">
+              <i class="pi pi-search" />
+              <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}"
+                value="#{webServicesBean.filter}">
+                <p:ajax event="keyup" delay="300" update=":webServicesForm:webServices" />
+              </p:inputText>
+            </div>
+          </div>
 
           <p:dataTable id="webServices" var="webservice" rows="12" paginator="true"
             value="#{webServicesBean.webServices}" paginatorPosition="bottom" paginatorAlwaysVisible="false"
             emptyMessage="#{ivy.cm.co('/webservices/noWebServicesFound')}"
             selectionMode="single" rowKey="#{webservice.link}" widgetVar="webServicesTable">
             <p:ajax event="rowSelect" listener="#{webServicesBean.executeRow}" />
-            <f:facet name="header">
-              <div class="flex justify-content-between mb-3 pretty-search">
-                <h4 class="m-0">#{ivy.cm.co('/webservices/webServiceProcesses')}</h4>
-                <div class="ui-input-icon-left">
-                  <i class="pi pi-search" />
-                  <p:inputText id="globalFilter" placeholder="#{ivy.cm.co('/common/search')}" value="#{webServicesBean.filter}"
-                    onkeyup="PF('webServicesTable').filter()"/>
-                </div>
-              </div>
-            </f:facet>
 
             <p:column width="20">
               <i class="si si-lg si-network-arrow" />
