XIVY-17286 Rework RedirectUtil

--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -17,7 +17,7 @@
 
 <f:metadata>
   <f:viewParam name="origin" value="#{loginBean.origin}"/>
-  <f:viewParam name="originalUrl" value="#{loginBean.origin}"/>
+  <f:viewParam name="originalUrl" value="#{loginBean.originalUrl}"/>
 </f:metadata>
 <h:body styleClass="login-body">
   <h:form id="loginForm">
