--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -33,7 +33,7 @@
               <div class="mt-3 mb-2">#{ivy.cm.co('/common/roles')}</div>
               <div id="roles" class="flex flex-wrap">
                 <ui:repeat var="role" value="#{profileBean.roles}">
-                  <div class="surface-50 my-1 mr-2 p-2 w-min border-round-lg">
+                  <div class="surface-50 my-1 mr-2 p-2 border-round-lg">
                     <h:outputText id="roles" value="#{role}" />
                   </div>
                 </ui:repeat>
